Filters form: ensure sorting select boxes remain aligned to right

--- a/app/assets/stylesheets/redesign/components/_filters-form.sass
+++ b/app/assets/stylesheets/redesign/components/_filters-form.sass
@@ -78,15 +78,13 @@
 
   fieldset.filter-sorting
     float: right
-    width: 25%
     margin: 1em 0 0
     +clearfix
 
     select
-      display: block
-      float: left
-      width: 47.5%
-      margin: 0 5% 0 0
+      display: inline-block
+      max-width: 15em
+      margin: 0 .5em 0 0
 
       &:last-of-type
         margin-right: 0
